@@ -2441,6 +2441,9 @@ function validate_builder_default(name, value, entity) {
 
 	var type = typeof(value);
 
+	if (entity.type === 12)
+		return value != null && type === 'object' && !(value instanceof Array);
+
 	// Enum + KeyValue + Custom (8+9+10)
 	if (entity.type > 7)
 		return value !== undefined;
